[gd_scene load_steps=19 format=3 uid="uid://chtx5nnws2m6a"]

[ext_resource type="Script" uid="uid://qulsx47cjtux" path="res://scripts/footsteps.gd" id="1_1lrkw"]
[ext_resource type="AudioStream" uid="uid://ckp4iqkymnhnj" path="res://assets/audio/footsteps/flesh/Mud footstep 2.wav" id="2_ldgoc"]
[ext_resource type="AudioStream" uid="uid://dy0bn2gn2xlyn" path="res://assets/audio/footsteps/flesh/Mud footstep 3.wav" id="3_mrse6"]
[ext_resource type="AudioStream" uid="uid://cpfxrkmvwi51v" path="res://assets/audio/footsteps/flesh/Mud footstep 4.wav" id="4_4fcep"]
[ext_resource type="AudioStream" uid="uid://3molqbvgmkkp" path="res://assets/audio/footsteps/flesh/Mud footstep 5.wav" id="5_x50b3"]
[ext_resource type="AudioStream" uid="uid://iaiwfkku2xpt" path="res://assets/audio/footsteps/wood/Wood footstep 4.wav" id="6_pac8w"]
[ext_resource type="AudioStream" uid="uid://cnmtwt8rxfmxx" path="res://assets/audio/footsteps/wood/Wood footstep 5.wav" id="7_4qru7"]
[ext_resource type="AudioStream" uid="uid://baylvl0k200yj" path="res://assets/audio/footsteps/wood/Wood footstep 6.wav" id="8_ff8bl"]
[ext_resource type="AudioStream" uid="uid://cuohjafm8pow5" path="res://assets/audio/footsteps/stone/Stone footstep 4.wav" id="9_jriqk"]
[ext_resource type="AudioStream" uid="uid://tqjjdidcl8pb" path="res://assets/audio/footsteps/stone/Stone footstep 5.wav" id="10_rjp2i"]
[ext_resource type="AudioStream" uid="uid://c2pwaj32xbasu" path="res://assets/audio/footsteps/grass/Grass footstep 7.wav" id="11_w6ywo"]
[ext_resource type="AudioStream" uid="uid://d3350o3l6hble" path="res://assets/audio/footsteps/grass/Grass footstep 8.wav" id="12_g0gfs"]
[ext_resource type="AudioStream" uid="uid://pk6l36k20oa6" path="res://assets/audio/footsteps/grass/Grass footstep 9.wav" id="13_taufa"]
[ext_resource type="AudioStream" uid="uid://bw5detlxfdktg" path="res://assets/audio/footsteps/grass/Grass footstep 10.wav" id="14_giv2i"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_g5jhy"]
random_pitch = 1.1
streams_count = 4
stream_0/stream = ExtResource("2_ldgoc")
stream_1/stream = ExtResource("3_mrse6")
stream_2/stream = ExtResource("4_4fcep")
stream_3/stream = ExtResource("5_x50b3")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_holxr"]
random_pitch = 1.1
streams_count = 3
stream_0/stream = ExtResource("6_pac8w")
stream_1/stream = ExtResource("7_4qru7")
stream_2/stream = ExtResource("8_ff8bl")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mx1m4"]
random_pitch = 1.1
streams_count = 2
stream_0/stream = ExtResource("9_jriqk")
stream_1/stream = ExtResource("10_rjp2i")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_u2ulf"]
random_pitch = 1.1
streams_count = 4
stream_0/stream = ExtResource("11_w6ywo")
stream_1/stream = ExtResource("12_g0gfs")
stream_2/stream = ExtResource("13_taufa")
stream_3/stream = ExtResource("14_giv2i")

[node name="Footsteps" type="Node3D"]
script = ExtResource("1_1lrkw")

[node name="FleshFootstepPlayer" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_g5jhy")
volume_db = -80.0

[node name="WoodFootstepPlayer" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_holxr")
volume_db = -20.0

[node name="StoneFootstepPlayer" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_mx1m4")
volume_db = -20.0

[node name="GrassFootstepPlayer" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_u2ulf")
volume_db = -20.0

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.168207, 0)
collision_mask = 917504
